--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "cookie-session": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
