--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "cookie-session": "^2.0.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
