--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "apexcharts": "^3.39.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "cookie-session": "^2.0.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
