--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "apexcharts": "^3.39.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-streaming": "^2.0.0",
     "classnames": "^2.3.2",
     "cookie-session": "^2.0.0",
     "js-cookie": "^3.0.1",
