--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
+    "jest": "^29.5.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
