--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "chartjs-plugin-streaming": "^2.0.0",
     "classnames": "^2.3.2",
     "cookie-session": "^2.0.0",
+    "jest": "^27.5.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
