Add AWS S3 connection

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1365.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.2.0",
