Write tests for GET/POST requests for user

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --no-cache --runInBand --forceExit",
+    "test:watch": "jest --watch",
     "start": "nodemon index.js",
     "db:reset": "psql -d aispy -f db/schema.sql && psql -d aispy -f db/seeds.sql"
   },
@@ -22,10 +23,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
-    "jest": "^29.5.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
