--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^4.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.39.0",
@@ -16,7 +14,6 @@
     "chartjs-plugin-streaming": "^2.0.0",
     "classnames": "^2.3.2",
     "cookie-session": "^2.0.0",
-    "jest": "^27.5.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -53,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^27.5.1"
   }
 }
