--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --no-cache --runInBand --forceExit",
+    "test": "jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1",
     "test:watch": "jest --watch",
     "start": "nodemon index.js",
     "db:reset": "if psql -lqt | cut -d \\| -f 1 | grep -qw aispy; then dropdb aispy; fi && createdb aispy && psql -d aispy -f db/schema.sql && psql -d aispy -f db/seeds.sql"
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "pg-promise": "^11.4.3"
   },
   "devDependencies": {
     "jest": "^29.5.0",
