--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "cypress": "^12.11.0",
     "jest": "^27.5.1"
   },
   "jest": {
